[project]
name = "koi-net-ask-topic-groups-node"
version = "0.1.1"
description = "Topic groups KOI-net node for the ask network application."
authors = [
    {name = "Luke Miller", email = "luke@metagov.org"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "koi-net~=2.0",
    "rid-lib>=3.2.16",
    "slack-bolt>=1.27.0",
]

[project.urls]
Homepage = "https://github.com/metagov/koi-net-ask-topic-groups-node"